--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header class="logo bg-dark">
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-md-12">
       <nav class="navbar navbar-dark bg-#2d2b2b">
   <a class="navbar-brand">START BOOTSTRAP</a>
       <ul class="nav justify-content-end">
@@ -109,15 +109,15 @@
         <h2>ABOUT</h2>
       </div>
       <div class="row">
-      <div class="col-md-6 ml-auto"> 
-      <div class="passege">      
-      <h3>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</h3>
+      <div class="col-md-6"> 
+      <div class="passege1">      
+      <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
       </div> 
       </div>
 
-      <div class="col-md-6 mr-auto"> 
-      <div class="passege">      
-      <h3>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</h3>
+      <div class="col-md-6"> 
+      <div class="passege2">      
+      <p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
       </div> 
       </div>
 
@@ -132,28 +132,28 @@
   <section class="contact-section">
     <div class="container">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-8  offset-md-2">
           <div class="text2">
-            <h2>CONTACT ME</h2>
+            <h2>CONTACT us</h2>
           </div>
              <form>
               <div class="form-group">
     <label for="exampleInputPassword1">Name</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
-  </div>
+    <input type="password" class="form-control  border-0" id="exampleInputPassword1">
+  </div><hr>
   <div class="form-group">
     <label for="exampleInputPassword1">Phone Number</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
-  </div>
+    <input type="password" class="form-control border-0" id="exampleInputPassword1">
+  </div><hr>
   <div class="form-group">
     <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <input type="email" class="form-control border-0" id="exampleInputEmail1" aria-describedby="emailHelp">
     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
+  </div><hr>
   <div class="form-group">
     <label for="exampleInputPassword1">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
-  </div>
+    <input type="password" class="form-control border-0" id="exampleInputPassword1">
+  </div><hr>
   <button type="submit" class="btn btn-success">Send</button>
 </form>
         </div>
